--- a/index.html
+++ b/index.html
@@ -1,73 +1,24 @@
 <!doctype html>
 <html>
- 
-<head>
-  <link rel="stylesheet" href="reset.css">
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-    }
-    .scene {
-      height: 100vh;
-      overflow: hidden;
-      background-attachment: fixed;
-      background-size: cover;
-      font-family: 'Source Sans Pro', sans-serif;
-      font-weight: 200;
-    }
-    .scene.one{
-      background-image: url(img/heic0910e.jpg);
-    }
-    .scene.two{
-      background-image: url(img/heic1501a.jpg);
-    }
-    .scene.three{
-      background-image: url(img/heic1608a.jpg);
-    }
-    .scene header{
-      color:white;
-      max-width: 80%;
-      position: relative;
-      left:50%;
-      top:50%;
-      transform:translateX(-50%) translateY(-50%);
-      font-size:1.5rem;
-      text-align: center;
-    }
-    .scene header h1{
-      font-size:2rem;
-      margin-bottom: 1rem;
-      font-weight: 300;
-    }
-    .scene header h1:after{
-      content:'';
-      border-bottom:1px solid white;
-      width:8rem;
-      display: block;
-      margin:0 auto;
-      margin-top:1rem;
-    }
-  </style>
-</head>
- 
-<body>
-  <section class="scene one">
-    <header>
-      <h1>Lorem ipsum dolor sit amet.</h1> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam suscipit sint ab beatae nihi
-    </header>
-  </section>
-  <section class="scene two">
-    <header>
-      <h1>Lorem ipsum dolor sit amet.</h1> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam suscipit sint ab beatae nihi
-    </header>
-  </section>
-  <section class="scene three">
-    <header>
-      <h1>Lorem ipsum dolor sit amet.</h1> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam suscipit sint ab beatae nihi
-    </header>
-  </section>
-   
-</body>
- 
+  <body>
+    <script src="http://cdn.jsdelivr.net/mojs/latest/mo.min.js"></script>
+    <script>
+      var c1 = new mojs.Shape({
+        shape:'circle',
+        radius:{0:'rand(10,50)'},
+        left:0,
+        top:0,
+        x:0,
+        y:0,
+        fill:'yellow',
+        stroke:'tomato',
+        strokeWidth:'rand(1,10)',
+        duration:'rand(200,2000)',
+        delay:0
+      });
+      document.addEventListener('click', function(e){
+        c1.generate().tune({x:e.pageX, y:e.pageY}).replay();
+      });
+    </script>
+  </body>
 </html>
