--- a/index.html
+++ b/index.html
@@ -1,21 +1,7 @@
 <!doctype html>
 <html>
   <body>
-    <script src="https://cdn.jsdelivr.net/npm/@mojs/core"></script>
-       <script>
-    const bouncyCircle = new mojs.Shape({
-        parent:       '#bouncyCircle',
-        shape:        'circle',
-        fill:         {'#F64040': '#FC46AD'},
-        radius:       {20: 80},
-        duration:     2000,
-        isYoyo:       true,
-        isShowStart:  true,
-        easing:       'elastic.inout',
-        repeat:       1,
-      });
-      
-      bouncyCircle.play()
-    </script>
+아아아dddd
+ddddd
   </body>
 </html>
