--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/cabin.png" alt="" />
                         </div>
+                        <h1 class="text-center text-uppercase text-secondary mb-0">이벤트</h1>
                     </div>
                     <!-- Portfolio Item 2-->
                     <div class="col-md-6 col-lg-4 mb-5">
@@ -81,6 +82,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/cake.png" alt="" />
                         </div>
+                        <h1 class="text-center text-uppercase text-secondary mb-0">이벤트2</h1>
                     </div>
                     <!-- Portfolio Item 3-->
                     <div class="col-md-6 col-lg-4 mb-5">
@@ -90,6 +92,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/circus.png" alt="" />
                         </div>
+                        <h1 class="text-center text-uppercase text-secondary mb-0">이벤트3</h1>
                     </div>
                     <!-- Portfolio Item 4-->
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
@@ -99,6 +102,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/game.png" alt="" />
                         </div>
+                        <h1 class="text-center text-uppercase text-secondary mb-0">이벤트4</h1>
                     </div>
                     <!-- Portfolio Item 5-->
                     <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
@@ -108,6 +112,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/safe.png" alt="" />
                         </div>
+                        <h1 class="text-center text-uppercase text-secondary mb-0">이벤트5</h1>
                     </div>
                     <!-- Portfolio Item 6-->
                     <div class="col-md-6 col-lg-4">
@@ -117,6 +122,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/submarine.png" alt="" />
                         </div>
+                        <h1 class="text-center text-uppercase text-secondary mb-0">이벤트6</h1>
                     </div>
                 </div>
             </div>
