--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/">
+                    <a class="btn btn-xl btn-outline-light" href="http://open.kakao.com/me/mangohyu">
                         <i class="fas fa-download mr-2"></i>
-                        Free Download!
+                        접속문의
                     </a>
                 </div>
             </div>
