--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <section class="page-section bg-primary text-white mb-0" id="about">
             <div class="container">
                 <!-- About Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-white">mbti방 소개</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -140,8 +140,8 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p></div>
-                    <div class="col-lg-4 mr-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
+                    <div class="col-lg-4 ml-auto"><p class="lead">각 유형별로 모여있는 mbti 20세이상 방입니다.</p></div>
+                    <div class="col-lg-4 mr-auto"><p class="lead">많은 이벤트 및 봇기능을 제공하고 있습니다.</p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
@@ -171,21 +171,21 @@
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
                                     <label>닉네임</label>
-                                    <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="톡방 닉네임을 알려주세요." />
+                                    <input class="form-control" id="name" type="text" placeholder="이름" required="required" data-validation-required-message="톡방 닉네임을 알려주세요." />
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
                                     <label>이메일</label>
-                                    <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="이메일 주소를 알려주세요." />
+                                    <input class="form-control" id="email" type="email" placeholder="이메일주소" required="required" data-validation-required-message="이메일 주소를 알려주세요." />
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
                                     <label>문의내용</label>
-                                    <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="문의내용을 작성해주세요."></textarea>
+                                    <textarea class="form-control" id="message" rows="5" placeholder="문의내용" required="required" data-validation-required-message="문의내용을 작성해주세요."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
@@ -205,7 +205,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">준비중</h4>
                         <p class="lead mb-0">
-                            2215 준비중
+                            작성중입니다!
                             <br />
                             준비중
                         </p>
