--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/gift.png" alt="" />
                         </div>
-                        <h1 class="text-center text-uppercase text-secondary mb-0">이벤트</h1>
+                        <p></p>
+                        <h2 class="text-center text-danger mb-0">크리스마스 이벤트</h2>
+                        <h3 class="text-center text-warning mb-0">(진행중)</h3>
                     </div>
                     <!-- Portfolio Item 2-->
                     <div class="col-md-6 col-lg-4 mb-5">
