--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/cake.png" alt="" />
                         </div>
-                        <h1 class="text-center text-uppercase text-secondary mb-0">이벤트2</h1>
+                        <p></p>
+                        <h1 class="text-center text-uppercase text-secondary mb-0">준비중</h1>
                     </div>
                     <!-- Portfolio Item 3-->
                     <div class="col-md-6 col-lg-4 mb-5">
@@ -94,7 +95,8 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/circus.png" alt="" />
                         </div>
-                        <h1 class="text-center text-uppercase text-secondary mb-0">이벤트3</h1>
+                        <p></p>
+                        <h1 class="text-center text-uppercase text-secondary mb-0">준비중</h1>
                     </div>
                     <!-- Portfolio Item 4-->
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
@@ -104,7 +106,8 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/game.png" alt="" />
                         </div>
-                        <h1 class="text-center text-uppercase text-secondary mb-0">이벤트4</h1>
+                        <p></p>
+                        <h1 class="text-center text-uppercase text-secondary mb-0">준비중</h1>
                     </div>
                     <!-- Portfolio Item 5-->
                     <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
@@ -114,7 +117,8 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/safe.png" alt="" />
                         </div>
-                        <h1 class="text-center text-uppercase text-secondary mb-0">이벤트5</h1>
+                        <p></p>
+                        <h1 class="text-center text-uppercase text-secondary mb-0">준비중</h1>
                     </div>
                     <!-- Portfolio Item 6-->
                     <div class="col-md-6 col-lg-4">
@@ -124,7 +128,8 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/submarine.png" alt="" />
                         </div>
-                        <h1 class="text-center text-uppercase text-secondary mb-0">이벤트6</h1>
+                        <p></p>
+                        <h1 class="text-center text-uppercase text-secondary mb-0">준비중</h1>
                     </div>
                 </div>
             </div>
