--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">환영합니다!</p>
+                <h1 class="mb-0">환영합니다!</h1>
             </div>
         </header>
         <!-- Portfolio Section-->
