--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             </div>
         </section>
         <!-- 소개 Section-->
-        <section class="page-section bg-success text-white mb-0" id="about">
+        <section class="page-section bg-warning text-white mb-0" id="about">
             <div class="container">
                 <!-- About Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-white">소개</h2>
