--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <meta property="og:image" content="assets/img/santa-claus.svg">
-        <title>MBTI 오픈채팅방 - 홈페이지</title>
+        <title>MBTI 오픈채팅힣방 - 홈페이지</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
