commint on main

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <meta property="og:image" content="assets/img/santa-claus.svg">
-        <title>MBTI 오픈채팅힣방 - 홈페이지</title>
+        <title>Mbti kakao Chat Room - 홈페이지</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -28,7 +28,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">소식/이벤트</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#guide">봇가이드</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">설명</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">문의하기</a></li>
                     </ul>
@@ -53,10 +53,10 @@
             </div>
         </header>
         <!-- Portfolio Section-->
-        <section class="page-section portfolio" id="portfolio">
+        <section class="page-section portfolio" id="guide">
             <div class="container">
                 <!-- Portfolio Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">소식/이벤트</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">봇가이드</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
@@ -71,11 +71,10 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/gift.png" alt="" />
+                            <img class="img-fluid" src="assets/img/guide/gardening-tool.png" alt="" />
                         </div>
                         <p></p>
-                        <h2 class="text-center text-secondary mb-0">크리스마스 이벤트</h2>
-                        <h3 class="text-center text-secondary mb-0">(종료)</h3>
+                        <h2 class="text-center text-secondary mb-0">농사 가이드</h2>
                     </div>
                     <!-- Portfolio Item 2-->
                     <div class="col-md-6 col-lg-4 mb-5">
@@ -83,7 +82,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/cake.png" alt="" />
+                            <img class="img-fluid" src="assets/img/guide/clockwise.png" alt="" />
                         </div>
                         <p></p>
                         <h1 class="text-center text-uppercase text-secondary mb-0">준비중</h1>
@@ -94,7 +93,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/circus.png" alt="" />
+                            <img class="img-fluid" src="assets/img/guide/map.png" alt="" />
                         </div>
                         <p></p>
                         <h1 class="text-center text-uppercase text-secondary mb-0">준비중</h1>
@@ -259,7 +258,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">크리스마스 상자</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">농사 가이드</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -267,9 +266,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/gift.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/guide/gardening-tool.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">랜덤으로 톡방에서 나타나는 상자를 얻고 25일 크리스마스 당일날 개봉해보세요!</p>
+                                    <p class="mb-5">농사도 가능해요</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
